# Voice-Activated-Autonomous-Knowledge-System

./: .gitattributes  .gitmodules  README.md
docs/plan4/: ANALYSIS-REPORT.md  CRITICAL-FIXES.md
docs/plan5/: CODE-QUALITY.md  COMPREHENSIVE-ANALYSIS.md  CRATE-ANALYSES.md  P0-CRITICAL-FIXES.md
plans/: 00-MASTER-PLAN.md  01-pipeline-plan.md  02-llm-plan.md  03-rag-plan.md  04-agent-plan.md
voice-agent/: README.md
voice-agent-rust/: Cargo.toml
voice-agent-rust/crates/agent/: Cargo.toml
voice-agent-rust/crates/agent/src/: agent.rs  intent.rs  (+4 more)
voice-agent-rust/crates/pipeline/: Cargo.toml
voice-agent-rust/crates/rag/: Cargo.toml
voice-agent-rust/crates/server/: Cargo.toml
voice-agent-rust/crates/text_processing/: Cargo.toml
voice-agent-rust/crates/tools/: Cargo.toml
voice-agent-rust/crates/transport/: Cargo.toml
voice-agent-rust/crates/transport/src/: codec.rs  lib.rs  session.rs  traits.rs  webrtc.rs  websocket.rs
voice-agent-rust/data/: branches.json
voice-agent-rust/models/embedding/: README.md
voice-agent-rust/models/reranker/: README.md
voice-agent-rust/models/vad/: silero_vad.onnx
voice-agent/backend/: Cargo.toml  README.md
voice-agent/backend/config/: default.yaml  production.yaml
voice-agent/backend/data/: gold_loan_vocab.txt
voice-agent/backend/docs/: STT_INTEGRATION.md  TTS_INTEGRATION.md
voice-agent/backend/scripts/: load_rag_knowledge.py
voice-agent/docs/: IMPLEMENTATION_PLAN.md  SMALL_MODEL_AGENT_RESEARCH.md  UNIFIED_REFACTORING_PLAN.md  VERIFICATION_RESULTS.md
voice-agent/frontend/: package-lock.json  package.json
(+191 files in other folders)
